docs/css/overrides.css
/* Remove all damage type elements from items (little colored notch on top left) */
.item-element {
  display: none !important;
}

/* Reset background color and font size for increased readability */
div[drag-channel='Kinetic'] > .item-stat,
div[drag-channel='Energy'] > .item-stat,
div[drag-channel='Power'] > .item-stat {
  background-color: transparent !important;
  bottom: 2px !important;
  color: rgba(255,255,255,0.8) !important;
  font-size: 12px !important;
  font-weight: bold !important;
  right: 2px !important;
}

/* We never use the collapse controls */
.fa.collapse.fa-minus-square-o,
.fa.collapse.fa-plus-square-o {
  display: none !important;
}

/* We never switch subclasses */
.sub-section.sort-3284755031 {
  display: none !important;
}

/*
  We removed the elemental damage color swatches from the weapons, as it was
  additional decoration we could capture elsewhere. We still want to indicate
  elemental damage type, so let's use the background of the damage number to
  indicate that.
*/
.item-element.arc ~ .item-stat {
  border-top: 2px solid rgba(133,197,236,0.9);
}
.item-element.solar ~ .item-stat {
  border-top: 2px solid rgba(242,114,27,0.9);
}
.item-element.void ~ .item-stat {
  border-top: 2px solid rgba(177,132,197,0.9);
}

/* Go for a more muted background */
body,
#header,
.sticky-header-background,
.store-cell.vault {
  background-color: #111 !important;
}

/* Improve design of section breaks */
.title {
  background-color: rgba(221,221,221,0.1) !important;
  font-family: Arial !important;
  font-size: 2.5em !important;
  font-weight: bold !important;
  height: 50px !important;
  line-height: 50px !important;
  margin: 10px 0 !important;
}

/*
  Uniform, translucent borders.
*/
.item-img,
.item-img.complete {
  background-repeat: no-repeat;
  border: 2px solid #929292;
}

/*
    Used to indicate infusion targets.
*/
.pulse {
  animation: glow 800ms ease-out infinite alternate;
  border: 2px solid #908130;
}
@keyframes glow {
  0% {
    border-color: #908130;
	box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
  }
  100% {
	border-color: #ffe86e;
	box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 2px 0 #000;
  }
}

/*
  Swap the orientation of Kinetics to make them all uniform and to leave room
  for the top left icon set.
*/
div[drag-channel='Kinetic'] .item-img {
  transform: scaleX(-1) !important;
}

/* Icon colorings */
.foaf-yes {
  color: rgba(93,181,110,1);
}
.foaf-no {
  color: rgba(206,82,70,1);
}
.foaf-thumbs-down {
  background-color: rgba(0,0,0,0.625);
  color:rgba(221,221,221,1);
  font-size:12px;
  top:2px;
  left:2px;
  text-shadow: none;
}
.foaf-question-mark {
  background-color: rgba(0,0,0,0.625);
  color:rgba(221,221,221,1);
  font-size:12px;
  top:2px;
  left:2px;
  text-shadow: none;
}
.foaf-pve {
  background-color: rgba(0,0,0,0.625);
  font-size:12px;
  top:2px;
  left:2px;
  text-shadow: none;
}
.foaf-pvp {
  background-color: rgba(0,0,0,0.625);
  font-size:12px;
  top:2px;
  left:19px;
  text-shadow: none;
}

.dupe-stat {
  background-color: rgba(0,0,0,0.625);
  position: absolute;
  bottom: 2px;
  left: 2px;
  font-size: 12px;
  font-weight: bold;
  text-align: center;
  -webkit-user-select: none;
  box-sizing: content-box;
}

/* Muted background; don't need to call too much attention to this */
.dupe-higher {
  color: rgba(93,181,110,1);
  padding: 0 4px;
}

/* You almost always want to destroy these */
.dupe-lower {
  color: rgba(206,82,70,1);
  padding: 1px 3px;
}

.infuse-stat {
  position: absolute;
  top: 2px;
  right: 2px;
  font-size: 12px;
  font-weight: bold;
  background-color: rgba(0,0,0,0.625);
  color: rgba(93,181,110,1);
  padding: 0;
  text-align: center;
  -webkit-user-select: none;
  box-sizing: content-box;
}

.infuse-new-light {
    background-color: rgba(0,0,0,0.625);
    color: rgba(245, 202, 31, 1);
    text-align: center;
    font-size: 18px;
    font-weight: bold;
    line-height: 28px;
    position: relative;
    top: -49px;
}

